syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Notification/Support/Grpc/Protos/model.proto";

service AccommodationGradingNotificationGrpcService {
  rpc accommodationGrading (MessageProto5) returns (MessageResponseProto5);
}