syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "Notification.Application.Notification.Support.Grpc.Protos";

message MessageProto {
  string email = 1;
  string startDate = 2;
  string endDate = 3;
  string accommodation = 4;
  string operation = 5;
}

message MessageResponseProto {
  string status = 1;
}

message MessageProto3 {
  string email = 1;
  string startDate = 2;
  string endDate = 3;
  string accommodation = 4;
}

message MessageResponseProto3 {
  string status = 1;
}

message MessageProto4 {
  string email = 1;
  int32 grade = 2;
}

message MessageResponseProto4 {
  string status = 1;
}

message MessageProto5 {
  string email = 1;
  string accommodation = 2;
  int32 grade = 3;
}

message MessageResponseProto5 {
  string status = 1;
}
